--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Actively</string>
     <string name="finish_button">Finish</string>
     <string name="resume_button">Resume</string>
+    <string name="save_activity_top_bar_title">Save Activity</string>
+    <string name="save_button">Save</string>
+    <string name="title_label">Title your ride</string>
 </resources>
