Add string labels to home and recorders bottm bar items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="cancel">Cancel</string>
     <string name="discard_warning">Warning</string>
     <string name="discard_text">Discarded activity will be permanently lost</string>
+    <string name="home">Home</string>
+    <string name="recorder">Record</string>
 </resources>
