--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="distance">Distance</string>
     <string name="time">Time</string>
     <string name="avg_speed">Avg speed</string>
+    <string name="your_activities">Your Activities</string>
 </resources>
