Add TopAppBar to recorderScreen with back button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="avg_speed">Avg speed</string>
     <string name="your_activities">Your Activities</string>
     <string name="syncing_activities">Syncing activities</string>
+    <string name="ride">Ride</string>
 </resources>
