Extract string resources form EmptyActivitiesListItem i

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="your_activities">Your Activities</string>
     <string name="syncing_activities">Syncing activities</string>
     <string name="ride">Ride</string>
+    <string name="no_activities_home_screen_state">You don\'t have any recorded activities.</string>
+    <string name="record_your_first_activity">Record your first activity!</string>
 </resources>
