Add basic PasswordTextField

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="record_your_first_activity">Record your first activity!</string>
     <string name="actively_list_error">Ops, something went wrong!\nPlease check your internet connection.</string>
     <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="password_textfield_supporting_text">Passwords must contain at least 8 characters.</string>
 </resources>
