--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="password_textfield_supporting_text">Passwords must contain at least 8 characters.</string>
     <string name="log_in_screen_header">Log in to Actively</string>
     <string name="log_in">Log in</string>
+    <string name="ok">OK</string>
+    <string name="invalid_credentials_message">Email or password are invalid. Please try again.</string>
 </resources>
