--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="track_your_active_life_in_one_place">Track your active life in one place</string>
     <string name="join_for_free">Join for free</string>
     <string name="logout">Logout</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
 </resources>
