--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="today_at">Today at %s</string>
     <string name="yesterday_at">Yesterday at %s</string>
     <string name="recorded_date_at">%s at %s</string>
+    <string name="delete_activity">Delete</string>
+    <string name="delete_text">Activity will be permanently lost</string>
+    <string name="delete_warning">Are you sure?</string>
 </resources>
