--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="logout">Logout</string>
     <string name="name">Name</string>
     <string name="surname">Surname</string>
+    <string name="statistics">Statistics</string>
 </resources>
