--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="rides">Rides</string>
     <string name="year_to_date">Year-to-date</string>
     <string name="elevation_gain">Elevation gain</string>
+    <string name="all_time">All time</string>
+    <string name="longest_ride">Longest ride</string>
 </resources>
