--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="statistics">Statistics</string>
     <string name="cycling">Cycling</string>
     <string name="running">Running</string>
-    <string name="nordic_waling">Nordic walking</string>
+    <string name="nordic_walking">Nordic walking</string>
     <string name="avg_weekly_activity">Avg weekly activity</string>
     <string name="rides">Rides</string>
     <string name="year_to_date">Year-to-date</string>
