--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -54,4 +54,7 @@
     <string name="time_in_seconds">Czas (s)</string>
     <string name="distance_km">Dystans (km)</string>
     <string name="avg_speed_km_h">Śr. prędkość (km/h)</string>
+    <string name="today_at">Dziś o %s</string>
+    <string name="yesterday_at">Wczoraj o %s</string>
+    <string name="recorded_date_at">%s o %s</string>
 </resources>
