--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,7 @@
     <string name="time_in_seconds">Time (s)</string>
     <string name="distance_km">Distance (km)</string>
     <string name="avg_speed_km_h">Avg speed (km/h)</string>
+    <string name="today_at">Today at %s</string>
+    <string name="yesterday_at">Yesterday at %s</string>
+    <string name="recorded_date_at">%s at %s</string>
 </resources>
