--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="walks">Walks</string>
     <string name="longest_run">Longest run</string>
     <string name="longest_walk">Longest walk</string>
+    <string name="statistics_error">Ops, something went wrong! Please, check your internet connection.</string>
 </resources>
