Add button to select discipline before launching activity recording

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="sum_ascent_meters">Sum of ascent (m)</string>
     <string name="sum_descent_meters">Sum of descent (m)</string>
     <string name="route">Recorded route</string>
+    <string name="choose_sport_discipline">Choose sports discipline</string>
 </resources>
