--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -65,4 +65,5 @@
     <string name="sum_ascent_meters">Suma wzniesień (m)</string>
     <string name="sum_descent_meters">Suma spadów (m)</string>
     <string name="route">Ślad GPS</string>
+    <string name="choose_sport_discipline">Wybierz dyscyplinę sportu</string>
 </resources>
